--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
-body {
+/*body {
 	font-family: : 'Arial';
+}
+*/
+
+table {
+	width:  100px;
+}
+nav{
+	background-color:rgb(15, 14, 14);
+	height: 90px;
+	text-align: center;
+}
+.menu > .line {
+	background-color: white;
+	height: 20px;
+	display: block;
+
+}
+
+.checkbtn{
+	color: white;
+}
+.button {
+	background-color: rgb(46, 40, 40);
+	float:left;
+	height: 40px;
+	width: 100%;
+	height:80px;
+	
+}
+label.menu {
+	color: white;
+	font-size: 42px;
+	line-height: 90px; 
+	float:left;
+	margin-left:30px;
+}
+
+label.logo {
+	color: white;
+	font-size: 50px;
+	line-height: 80px;
+	
+}
+table, tr,td {
+	border-collapse: collapse;
+	padding: 13px 25px;	
+}
+a{
+	text-decoration: none;
+	color:white;
+}
+td:hover {
+	background-color: rgba(35, 35, 88, 0.904);
+}
+tr{
+	background-color:rgb(15, 14, 14);
 }
