--- a/style.css
+++ b/style.css
@@ -7,53 +7,47 @@ table {
 	width:  100px;
 }
 nav{
-	background-color:rgb(15, 14, 14);
-	height: 90px;
+	background-color:rgb(151, 166, 180);
+	height: 60px;
 	text-align: center;
 }
-.menu > .line {
-	background-color: white;
-	height: 20px;
-	display: block;
 
-}
 
-.checkbtn{
-	color: white;
-}
-.button {
-	background-color: rgb(46, 40, 40);
-	float:left;
-	height: 40px;
-	width: 100%;
-	height:80px;
-	
-}
+
 label.menu {
 	color: white;
-	font-size: 42px;
-	line-height: 90px; 
+	font-size: 30px;
+	line-height: 59px; 
 	float:left;
 	margin-left:30px;
 }
 
-label.logo {
-	color: white;
-	font-size: 50px;
-	line-height: 80px;
+label.menu:hover{
+	font-size: 35px;
 	
 }
-table, tr,td {
-	border-collapse: collapse;
-	padding: 13px 25px;	
+
+label.logo {
+	color: rgb(2, 2, 2);
+	font-size: 40px;
+	line-height: 55px;
+	
 }
-a{
+table.beta,td.beta {
+	border-collapse: collapse;
+	padding: 15px 50px;	
+	width: 12%;
+}
+td.beta a{
 	text-decoration: none;
 	color:white;
 }
-td:hover {
+
+td.beta:hover {
 	background-color: rgba(35, 35, 88, 0.904);
+	border-bottom: solid 1.5px rgba(255, 255, 255, 0.37);
+	font-size: 17px;
 }
-tr{
-	background-color:rgb(15, 14, 14);
+table.beta{
+	background-color:rgb(69, 82, 85);
 }
